update menu controller